.provarCaches/00D5f000005vwGkEAI/objects/rstk__syresultd__c.object
<CustomObject>
    <customHelpPage>rstk__objecthelp_syresultd</customHelpPage>
    <description>syresultd</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>formula_name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syresultd_errortext__c</fullName>
        <description>syresultd_errortext</description>
        <label>Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__syresultd_icdreq__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>syresultd_icdreq</description>
        <label>Disassembly Demand</label>
        <referenceTo>rstk__icdreq__c</referenceTo>
        <relationshipLabel>Processing Result Details</relationshipLabel>
        <relationshipName>syresultds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__syresultd_icfcstdmd__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>syresultd_icfcstdmd</description>
        <label>Forecast Demand</label>
        <referenceTo>rstk__icfcstdmd__c</referenceTo>
        <relationshipLabel>Processing Result Details</relationshipLabel>
        <relationshipName>syresultds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__syresultd_icixr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>syresultd_icixr</description>
        <label>Requirements</label>
        <referenceTo>rstk__icixr__c</referenceTo>
        <relationshipLabel>Processing Result Details</relationshipLabel>
        <relationshipName>syresultds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__syresultd_icreq__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>syresultd_icreq</description>
        <label>Requisition</label>
        <referenceTo>rstk__icreq__c</referenceTo>
        <relationshipLabel>Processing Result Details</relationshipLabel>
        <relationshipName>syresultds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__syresultd_icreqdmd__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>syresultd_icreqdmd</description>
        <label>Requisition Demand</label>
        <referenceTo>rstk__icreqdmd__c</referenceTo>
        <relationshipLabel>Processing Result Details</relationshipLabel>
        <relationshipName>syresultds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__syresultd_ictrstdmd__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>syresultd_ictrstdmd</description>
        <label>Intercompany Demand</label>
        <referenceTo>rstk__ictrstdmd__c</referenceTo>
        <relationshipLabel>Processing Result Details</relationshipLabel>
        <relationshipName>syresultds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__syresultd_ictrstsup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>syresultd_ictrstsup</description>
        <label>Intercompany Supply</label>
        <referenceTo>rstk__ictrstsup__c</referenceTo>
        <relationshipLabel>Processing Result Details</relationshipLabel>
        <relationshipName>syresultds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__syresultd_longerrortext__c</fullName>
        <label>Error Message Long</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__syresultd_podmd__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>syresultd_podmd</description>
        <label>Purchase Order Demand</label>
        <referenceTo>rstk__podmd__c</referenceTo>
        <relationshipLabel>Processing Result Details</relationshipLabel>
        <relationshipName>syresultds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__syresultd_poline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>syresultd_poline</description>
        <label>PO Line</label>
        <referenceTo>rstk__poline__c</referenceTo>
        <relationshipLabel>Processing Result Details</relationshipLabel>
        <relationshipName>syresultds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__syresultd_repairerror__c</fullName>
        <defaultValue>false</defaultValue>
        <description>syresultd_repairerror</description>
        <label>Repair Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__syresultd_soline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>syresultd_soline</description>
        <label>Sales Order Line</label>
        <referenceTo>rstk__soline__c</referenceTo>
        <relationshipLabel>Processing Result Details</relationshipLabel>
        <relationshipName>syresultds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__syresultd_soorddmd__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>syresultd_soorddmd</description>
        <label>Sales Order Demand</label>
        <referenceTo>rstk__soorddmd__c</referenceTo>
        <relationshipLabel>Processing Result Details</relationshipLabel>
        <relationshipName>Processing_Result_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__syresultd_syresult__c</fullName>
        <description>syresultd_syresult</description>
        <label>Processing Results</label>
        <referenceTo>rstk__syresult__c</referenceTo>
        <relationshipLabel>Processing Result Details</relationshipLabel>
        <relationshipName>syresultds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__syresultd_wocst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>syresultd_wocst</description>
        <label>Work Order</label>
        <referenceTo>rstk__wocst__c</referenceTo>
        <relationshipLabel>Processing Result Details</relationshipLabel>
        <relationshipName>syresultds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__syresultd_woorddmd__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>syresultd_woorddmd</description>
        <label>Work Order Demand</label>
        <referenceTo>rstk__woorddmd__c</referenceTo>
        <relationshipLabel>Processing Result Details</relationshipLabel>
        <relationshipName>syresultds</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Processing Result Details</label>
    <listViews>
        <fullName>rstk__Demand_Details</fullName>
        <columns>NAME</columns>
        <columns>rstk__syresultd_errortext__c</columns>
        <columns>rstk__syresultd_icixr__c</columns>
        <columns>rstk__syresultd_icfcstdmd__c</columns>
        <columns>rstk__syresultd_podmd__c</columns>
        <columns>rstk__syresultd_icreqdmd__c</columns>
        <columns>rstk__syresultd_soorddmd__c</columns>
        <columns>rstk__syresultd_woorddmd__c</columns>
        <columns>rstk__syresultd_ictrstdmd__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Demand Details</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__ICIXR_Analysis_Result_Details_All</fullName>
        <columns>NAME</columns>
        <columns>rstk__syresultd_icixr__c</columns>
        <columns>rstk__syresultd_errortext__c</columns>
        <columns>rstk__syresultd_syresult__c</columns>
        <columns>rstk__syresultd_repairerror__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>ICIXR Analysis Result Details - All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__SYRESULT_Details</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__syresultd_syresult__c</columns>
        <columns>rstk__syresultd_errortext__c</columns>
        <columns>rstk__syresultd_poline__c</columns>
        <columns>rstk__syresultd_podmd__c</columns>
        <columns>rstk__syresultd_icreq__c</columns>
        <columns>rstk__syresultd_icreqdmd__c</columns>
        <columns>rstk__syresultd_wocst__c</columns>
        <columns>rstk__syresultd_woorddmd__c</columns>
        <columns>rstk__syresultd_soline__c</columns>
        <columns>rstk__syresultd_soorddmd__c</columns>
        <columns>rstk__syresultd_icfcstdmd__c</columns>
        <columns>rstk__syresultd_icixr__c</columns>
        <columns>rstk__syresultd_repairerror__c</columns>
        <filterScope>Everything</filterScope>
        <label>SYRESULT Details</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__SYRESULT_Details_Today</fullName>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>rstk__syresultd_syresult__c</columns>
        <columns>rstk__syresultd_errortext__c</columns>
        <columns>rstk__syresultd_poline__c</columns>
        <columns>rstk__syresultd_podmd__c</columns>
        <columns>rstk__syresultd_icreq__c</columns>
        <columns>rstk__syresultd_icreqdmd__c</columns>
        <columns>rstk__syresultd_wocst__c</columns>
        <columns>rstk__syresultd_woorddmd__c</columns>
        <columns>rstk__syresultd_soline__c</columns>
        <columns>rstk__syresultd_soorddmd__c</columns>
        <columns>rstk__syresultd_icfcstdmd__c</columns>
        <columns>rstk__syresultd_icixr__c</columns>
        <columns>rstk__syresultd_repairerror__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>SYRESULT Details - Today</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__Supply_Details</fullName>
        <columns>NAME</columns>
        <columns>rstk__syresultd_errortext__c</columns>
        <columns>rstk__syresultd_icixr__c</columns>
        <columns>rstk__syresultd_poline__c</columns>
        <columns>rstk__syresultd_icreq__c</columns>
        <columns>rstk__syresultd_soline__c</columns>
        <columns>rstk__syresultd_wocst__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Supply Details</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Processing Result Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>